# solver-wordle

./: .gitignore  requirements.txt  run.cmd  setup.cfg  setup.py
data/: tracker.json  valid_words_web.txt
src/: cli_interface.py  expected_information_strategy.py  first_alphabet_choice_strategy.py  game_result.py  guess_result.py  interface.py  letter_frequency_strategy.py  letter_result.py  main.py  main_old.py  random_guess_strategy.py  restriction.py  restriction_logic.py  restriction_logic_test.py  solver.py  strategy.py  strategy_evaluator.py  temp.py  tracker.py  user_input_interface.py  user_input_strategy.py  utility.py  web_app_interface.py  word_list.py  word_set.py  wordle.py  wordle_logic.py
src/abstracts/: engine.py  interface.py  strategy.py
src/enums/: letter_result.py
src/interfaces/: cli_interface.py
src/logic/: engine.py  guess_result.py  result_calculator.py
src/strategies/: random_guess_strategy.py
