[metadata]
description-file = README.md


[flake8]
; https://flake8.pycqa.org/en/latest/user/options.html
; format flake8 output options
count = True
show-source = True
statistics = True
ignore = E701

; code settings
max-line-length = 120

; flake8-annotations - https://pypi.org/project/flake8-annotations/
extend-ignore = ANN101

; flake8-quotes - https://pypi.org/project/flake8-quotes/
multiline-quotes = '
docstring-quotes = '